# so101-control

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: example_move_ee.py
src/so101_control/: __init__.py  cli.py  control.py
tests/: test_control_dry_run.py  test_go_to_ee_dry_run.py  test_parsers.py
